# backend

./: .env  .gitignore  Cargo.toml  README.md  Secrets.sample.toml  Shuttle.toml  login_signup_test.md
.github/workflows/: deploy.yml
examples/: quick_dev.rs  quick_test.rs
src/: config.rs  controllers.rs  email.rs  login_signup.rs  main.rs  smtp_config.rs
src/controllers/: auth.rs  authentication.rs  compile_code.rs  email.rs  login_signup.rs
src/controllers/auth/: change_password.rs  email_util.rs  login.rs  reset_password.rs  send_email.rs  signup.rs
templates/: forget_password_code.hbs
