[package]
name = "zenlang"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2"}
shuttle-axum = { version = "0.35.2", features = ["axum-0-7"], default-features = false }
shuttle-runtime = { version = "0.35.2", default-features = false }
shuttle-persist = "0.35.2"
shuttle-secrets = "0.35.2"
handlebars = "4.5.0"
lettre = { version = "0.11.2", features = ["tokio1", "tokio1-native-tls"] }
serde = "1.0.193"
tower-http = { version = "0.5.0", features = ["full"] }
http = "1.0.0"
zen = {git = "https://github.com/zenlang-rs/zen-lang.git", branch = "main", version = "^0.2.5"}
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
anyhow = "1.0.75"
serde_json = "1.0.108"
rand = "0.8.5"
lazy_static = "1.4.0"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
httpc-test = "0.1.8"
# once_cell = "1.18.0"
# serde_json = "1.0.108"
# mongodb = "2.0.0"
# tokio = "1.28.2"
# hyper = "0.14.27"
# tower = "0.4.13"
