[package]
name = "zenlang"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = { version = "0.7.4"}
shuttle-axum = { version = "0.45.0" }
shuttle-runtime = { version = "0.45.0", default-features = false }
shuttle-persist = "0.45.0"
handlebars = "5.1.0"
lettre = { version = "0.11.4", features = ["tokio1", "tokio1-native-tls"] }
serde = "1.0.197"
tower-http = { version = "0.5.2", features = ["full"] }
http = "1.0.0"
zen = {git = "https://github.com/zenlang-rs/zen-lang.git", branch = "main", version = "^0.2.6"}
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
anyhow = "1.0.80"
serde_json = "1.0.114"
rand = "0.8.5"
lazy_static = "1.4.0"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
httpc-test = "0.1.9"
# once_cell = "1.18.0"
# serde_json = "1.0.108"
# mongodb = "2.0.0"
# tokio = "1.28.2"
# hyper = "0.14.27"
# tower = "0.4.13"
