[package]
name = "zenlang"
version = "0.2.2"
edition = "2024"

[dependencies]
axum = { version = "0.7.9"}
shuttle-axum = { version = "0.50.0" }
shuttle-runtime = { version = "0.50.0", default-features = false }
shuttle-persist = "0.50.0"
handlebars = "6.3.0"
lettre = { version = "0.11.11", features = ["tokio1", "tokio1-native-tls"] }
serde = "1.0.217"
tower-http = { version = "0.6.2", features = ["full"] }
http = "1.2.0"
zen = {git = "https://github.com/zenlang-rs/zen-lang.git", branch = "main", version = "^0.2.6"}
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
anyhow = "1.0.95"
serde_json = "1.0.135"
rand = "0.8.5"
lazy_static = "1.5.0"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
httpc-test = "0.1.10"
# once_cell = "1.18.0"
# serde_json = "1.0.108"
# mongodb = "2.0.0"
# tokio = "1.28.2"
# hyper = "0.14.27"
# tower = "0.4.13"
